# symmetrizer

./: README.md  cartpole_tests.py  main.py  pyproject.toml  test.py
my_s/groups/: __init__.py  groups.py
my_s/nn/: cartpole_networks.py  grid_networks.py  modules.py
my_s/ops/: __init__.py  cartpole_ops.py  ops.py
symmetrizer/groups/: groups.py
symmetrizer/nn/: cartpole_networks.py
wandb/: latest-run
wandb/run-20250818_155718-mw7tq0i9/: run-mw7tq0i9.wandb
wandb/run-20250818_155718-mw7tq0i9/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250818_160317-hsmajces/: run-hsmajces.wandb
wandb/run-20250818_160317-hsmajces/files/: config.yaml  wandb-metadata.json
wandb/run-20250818_160340-els5owng/: run-els5owng.wandb
wandb/run-20250818_160340-els5owng/files/: wandb-metadata.json
wandb/run-20250818_162901-x0yukk6k/: run-x0yukk6k.wandb
wandb/run-20250818_162901-x0yukk6k/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250818_162934-2220mmqu/: run-2220mmqu.wandb
wandb/run-20250818_162934-2220mmqu/files/: config.yaml  wandb-metadata.json
wandb/run-20250818_163444-0lw6ixna/: run-0lw6ixna.wandb
wandb/run-20250818_163701-t63lvxh0/: run-t63lvxh0.wandb
wandb/run-20250818_163749-y21tb131/: run-y21tb131.wandb
wandb/run-20250818_163828-wgobmi6s/: run-wgobmi6s.wandb
wandb/run-20250818_163943-7jqy80au/: run-7jqy80au.wandb
wandb/run-20250818_163956-6hrm4qqv/: run-6hrm4qqv.wandb
wandb/run-20250818_164024-o30cpvd5/: run-o30cpvd5.wandb
wandb/run-20250818_164103-1gn5fhqy/: run-1gn5fhqy.wandb
(+24 files in other folders)
